--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -20,12 +20,14 @@ jobs:
         KEY_PASS: test@cake_wallet
         PR_NUMBER: 1234
         MONEROC_CACHE_DIR_ROOT: /opt/generic_cache
+        BRANCH_NAME: main
       volumes:
-        - /opt/cw_cache/root/.cache:/root/.cache
-        - /opt/cw_cache/root/.pub-cache/:/root/.pub-cache
-        - /opt/cw_cache/root/.gradle/:/root/.gradle
-        - /opt/cw_cache/root/.android/:/root/.android
-        - /opt/cw_cache/opt/generic_cache:/opt/generic_cache
+        - /opt/cw_cache_android/root/.cache:/root/.cache
+        - /opt/cw_cache_android/root/.pub-cache/:/root/.pub-cache
+        - /opt/cw_cache_android/root/.gradle/:/root/.gradle
+        - /opt/cw_cache_android/root/.android/:/root/.android
+        - /opt/cw_cache_android/root/go/pkg:/root/go/pkg
+        - /opt/cw_cache_android/opt/generic_cache:/opt/generic_cache
     strategy:
       matrix:
         api-level: [29]
@@ -51,103 +53,60 @@ jobs:
         run: |
           export MONEROC_HASH=$(cat scripts/prepare_moneroc.sh | grep 'git checkout' | xargs | awk '{ print $3 }')
           echo MONEROC_HASH=$MONEROC_HASH >> /etc/environment
-          for cache_dir in contrib/depends/built contrib/depends/work {monero,wownero}/contrib/depends/{built,work}
-          do
-            mkdir -p $cache_dir || true
-            mkdir -p "${{ github.workspace }}/$MONEROC_HASH/contrib/depends/built" || true
-            mount --bind "$MONEROC_CACHE_DIR_ROOT/$MONEROC_HASH/contrib/depends/built" "${{ github.workspace }}/contrib/depends/built"
-          done
-
+          mkdir -p "$MONEROC_CACHE_DIR_ROOT/$MONEROC_HASH/monero_c"
           pushd scripts
+            ln -s "$MONEROC_CACHE_DIR_ROOT/$MONEROC_HASH/monero_c"
             ./prepare_moneroc.sh
           popd
 
-
-      - name: Clone Repo
-        run: |
-          sudo mkdir -p /opt/android
-          sudo chown $USER /opt/android
-          cd /opt/android
-          git clone https://github.com/cake-tech/cake_wallet.git --branch ${{ env.BRANCH_NAME }}
-
-#      - name: Cache Keystore
-#        id: cache-keystore
-#        uses: actions/cache@v3
-#        with:
-#          path: /opt/android/cake_wallet/android/app
-#          key: keystore
-#
-#      - if: ${{ steps.cache-keystore.outputs.cache-hit != 'true' }}
       - name: Generate KeyStore
         run: |
-          cd /opt/android/cake_wallet/android/app
-          keytool -genkey -v -keystore key.jks -keyalg RSA -keysize 2048 -validity 10000 -alias testKey -noprompt -dname "CN=CakeWallet, OU=CakeWallet, O=CakeWallet, L=Florida, S=America, C=USA" -storepass $STORE_PASS -keypass $KEY_PASS
+          pushd /opt/generic_cache
+            if [[ ! -f key.jks ]];
+            then
+              keytool -genkey -v -keystore key.jks -keyalg RSA -keysize 2048 -validity 10000 -alias testKey -noprompt -dname "CN=CakeWallet, OU=CakeWallet, O=CakeWallet, L=Florida, S=America, C=USA" -storepass $STORE_PASS -keypass $KEY_PASS
+            else
+              echo "$PWD/key.jks exist, not generating"
+            fi
+          popd
+          cp /opt/generic_cache/key.jks android/app
 
       - name: Execute Build and Setup Commands
         run: |
-          cd /opt/android
-          -y curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
-          cargo install cargo-ndk
-          cd cake_wallet/scripts/android/
-          ./install_ndk.sh
-          source ./app_env.sh cakewallet
-          chmod +x pubspec_gen.sh
-          ./app_config.sh
+          pushd scripts/android
+            source ./app_env.sh cakewallet
+            ./app_config.sh
+          popd
 
-      - name: Cache Externals
-        id: cache-externals
-        uses: actions/cache@v3
-        with:
-          path: |
-            /opt/android/cake_wallet/cw_haven/android/.cxx
-            /opt/android/cake_wallet/scripts/monero_c/release
-          key: ${{ hashFiles('**/prepare_moneroc.sh' ,'**/build_monero_all.sh' ,'**/cache_dependencies.yml') }}
-
-      - if: ${{ steps.cache-externals.outputs.cache-hit != 'true' }}
-        name: Generate Externals
+      - name: Build monero_c
         run: |
-          cd /opt/android/cake_wallet/scripts/android/
-          source ./app_env.sh cakewallet
-          ./build_monero_all.sh
+          pushd scripts/android/
+            source ./app_env.sh cakewallet
+            ./build_monero_all.sh
+          popd
 
       - name: Install Flutter dependencies
         run: |
-          cd /opt/android/cake_wallet
           flutter pub get
-
-
-      - name: Install go and gomobile
-        run: |
-          # install go > 1.23:
-          wget https://go.dev/dl/go1.23.1.linux-amd64.tar.gz
-          sudo rm -rf /usr/local/go && sudo tar -C /usr/local -xzf go1.23.1.linux-amd64.tar.gz
-          export PATH=$PATH:/usr/local/go/bin
-          export PATH=$PATH:~/go/bin
-          go install golang.org/x/mobile/cmd/gomobile@latest
-          gomobile init
 
       - name: Build mwebd
         run: |
-          # paths are reset after each step, so we need to set them again:
-          export PATH=$PATH:/usr/local/go/bin
-          export PATH=$PATH:~/go/bin
-          cd /opt/android/cake_wallet/scripts/android/
-          ./build_mwebd.sh --dont-install
+          pushd scripts/android
+            gomobile init
+            ./build_mwebd.sh --dont-install
+          popd
 
       - name: Generate key properties
         run: |
-          cd /opt/android/cake_wallet
           dart run tool/generate_android_key_properties.dart keyAlias=testKey storeFile=key.jks storePassword=$STORE_PASS keyPassword=$KEY_PASS
 
       - name: Generate localization
         run: |
-          cd /opt/android/cake_wallet
           dart run tool/generate_localization.dart
 
       - name: Build generated code
         run: |
-          cd /opt/android/cake_wallet
-          ./model_generator.sh
+          ./model_generator.sh async
 
       - name: Add secrets
         run: |
@@ -217,7 +176,7 @@ jobs:
 
       - name: Rename app
         run: |
-          echo -e "id=com.cakewallet.test_${{ env.PR_NUMBER }}\nname=${{ env.BRANCH_NAME }}" > /opt/android/cake_wallet/android/app.properties
+          echo -e "id=com.cakewallet.test_$PR_NUMBER\nname=$BRANCH_NAME" > /opt/android/cake_wallet/android/app.properties
 
       # Step 3: Download previous build number
       - name: Download previous build number
@@ -254,25 +213,12 @@ jobs:
           cd /opt/android/cake_wallet
           flutter build apk --release --split-per-abi
 
-      #            - name: Push to App Center
-      #              run: |
-      #                echo 'Installing App Center CLI tools'
-      #                npm install -g appcenter-cli
-      #                echo "Publishing test to App Center"
-      #                appcenter distribute release \
-      #                    --group "Testers" \
-      #                    --file "/opt/android/cake_wallet/build/app/outputs/apk/release/app-release.apk" \
-      #                    --release-notes ${{ env.BRANCH_NAME }} \
-      #                    --app Cake-Labs/Cake-Wallet \
-      #                    --token ${{ secrets.APP_CENTER_TOKEN }} \
-      #                    --quiet
-
       - name: Rename apk file
         run: |
           cd /opt/android/cake_wallet/build/app/outputs/flutter-apk
           mkdir test-apk
-          cp app-arm64-v8a-release.apk test-apk/${{env.BRANCH_NAME}}.apk
-          cp app-x86_64-release.apk test-apk/${{env.BRANCH_NAME}}_x86.apk
+          cp app-arm64-v8a-release.apk test-apk/$BRANCH_NAME.apk
+          cp app-x86_64-release.apk test-apk/${BRANCH_NAME}_x86.apk
 
       - name: Upload Artifact
         uses: kittaakos/upload-artifact-as-is@v0
@@ -291,9 +237,9 @@ jobs:
         uses: adrey/slack-file-upload-action@1.0.5
         with:
           token: ${{ secrets.SLACK_APP_TOKEN }}
-          path: /opt/android/cake_wallet/build/app/outputs/flutter-apk/test-apk/${{env.BRANCH_NAME}}.apk
+          path: /opt/android/cake_wallet/build/app/outputs/flutter-apk/test-apk/$BRANCH_NAME.apk
           channel: ${{ secrets.SLACK_APK_CHANNEL }}
-          title: "${{ env.BRANCH_NAME }}.apk"
-          filename: ${{ env.BRANCH_NAME }}.apk
+          title: "$BRANCH_NAME.apk"
+          filename: $BRANCH_NAME.apk
           initial_comment: ${{ github.event.head_commit.message }}
 
