--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -9,7 +9,9 @@ on:
         description: "Branch name to build"
         required: true
         default: "main"
-
+defaults:
+  run:
+    shell: bash
 jobs:
   PR_test_build:
     runs-on: linux-amd64
