--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -101,7 +101,9 @@ RUN yes | sdkmanager \
 
 ENV ANDROID_NDK_VERSION=27.2.12479018
 
-RUN yes | sdkmanager "ndk;$ANDROID_NDK_VERSION"
+# Extra ndk dependency for sp_scanner
+RUN yes | sdkmanager "ndk;$ANDROID_NDK_VERSION" \
+    "ndk;27.0.12077973"
 
 ENV PATH=${HOME}/.cargo/bin:${PATH}
 
