--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -252,7 +252,7 @@ jobs:
           cp app-arm64-v8a-release.apk test-apk/${BRANCH_NAME}.apk
           cp app-x86_64-release.apk test-apk/${BRANCH_NAME}_x86.apk
           cd test-apk
-          cp test-apk/${BRANCH_NAME}.apk test-apk/${BRANCH_NAME}_slack.apk
+          cp ${BRANCH_NAME}.apk ${BRANCH_NAME}_slack.apk
       - name: Upload Artifact
         uses: kittaakos/upload-artifact-as-is@v0
         with:
