I refuse to undo mwebd caching

--- a/.github/workflows/pr_test_build_android.yml
+++ b/.github/workflows/pr_test_build_android.yml
@@ -195,8 +195,7 @@ jobs:
             cp mwebd/mwebd.aar ${{ github.workspace }}/cw_mweb/android/libs/mwebd.aar || (
               gomobile init;
               ./build_mwebd.sh --dont-install
-            )
-            
+            ) && cp mwebd/mwebd.aar ${{ github.workspace }}/cw_mweb/android/libs/mwebd.aar
           popd
 
       - name: Build generated code
