--- a/.github/workflows/pr_test_build_linux.yml
+++ b/.github/workflows/pr_test_build_linux.yml
@@ -178,7 +178,7 @@ jobs:
       - name: Rename apk file
         run: |
           pushd build/linux/x64/release
-          zip -r cakewallet_linux.zip
+          zip -r cakewallet_linux.zip bundle
           popd
       - name: Upload Artifact
         uses: kittaakos/upload-artifact-as-is@v0
