--- a/.github/workflows/pr_test_build_linux.yml
+++ b/.github/workflows/pr_test_build_linux.yml
@@ -183,4 +183,4 @@ jobs:
       - name: Upload Artifact
         uses: kittaakos/upload-artifact-as-is@v0
         with:
-          path: ${{ github.workspace }}/ build/linux/x64/release/cakewallet_linux.zip
+          path: ${{ github.workspace }}/build/linux/x64/release/cakewallet_linux.zip
