--- a/Dockerfile.windows
+++ b/Dockerfile.windows
@@ -6,6 +6,11 @@ FROM mcr.microsoft.com/windows/servercore:ltsc2022
 
 ENV FLUTTER_VERSION=3.24.0
 ENV GIT_VERSION=2.47.1
+ENV VS_INSTALLED_DIR="C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools"
+ENV PATH="C:\Users\ContainerAdministrator\.cargo\bin;C:\ProgramData\chocolatey\bin;C:\flutter\flutter\bin;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Windows\System32\OpenSSH\;C:\Users\ContainerAdministrator\AppData\Local\Microsoft\WindowsApps"
+ENV RUNNER_VERSION=2.321.0
+ENV RUNNER_URL=https://github.com/actions/runner/releases/download/v${RUNNER_VERSION}/actions-runner-win-x64-${RUNNER_VERSION}.zip
+ENV RUNNER_WORKDIR=_work
 
 RUN powershell -Command \
     curl.exe -L https://aka.ms/vs/17/release/vc_redist.x64.exe -o vc_redist.x64.exe ; \
@@ -18,8 +23,6 @@ RUN powershell -Command \
     Start-Process -Wait -FilePath .\git_installer.exe -ArgumentList '/SILENT', '/NOICONS' ; \
     Remove-Item -Force git_installer.exe
 
-ENV VS_INSTALLED_DIR="C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools"
-
 RUN powershell -NoProfile -ExecutionPolicy Bypass -Command \
     Set-ExecutionPolicy RemoteSigned -Scope Process; \
     [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; \
@@ -27,10 +30,11 @@ RUN powershell -NoProfile -ExecutionPolicy Bypass -Command \
     powershell -NoProfile -ExecutionPolicy Bypass -File install.ps1; \
     Remove-Item -Force install.ps1
 
-RUN choco install -y visualstudio2022community \
-    visualstudio2022-workload-nativedesktop \
-    nodejs \
-    go
+RUN choco install -y visualstudio2022community
+RUN choco install -y visualstudio2022-workload-nativedesktop
+RUN choco install -y nodejs
+RUN choco install -y go
+RUN choco install -y 7zip
 
 RUN powershell -Command \
     curl.exe -L https://win.rustup.rs -o rustup-init.exe; \
@@ -43,9 +47,18 @@ RUN powershell -Command \
 RUN powershell -Command \
     $FLUTTER_VERSION = [Environment]::GetEnvironmentVariable('FLUTTER_VERSION'); \
     curl.exe -L https://storage.googleapis.com/flutter_infra_release/releases/stable/windows/flutter_windows_$($FLUTTER_VERSION)-stable.zip -o flutter.zip ; \
-    Expand-Archive -Path flutter.zip -DestinationPath C:\flutter -Verbose ; \
+    7z x flutter.zip -oC:\flutter -bsp1 -bse1 ; \
     Remove-Item -Force flutter.zip
 
-ENV PATH="C:\Users\ContainerAdministrator\.cargo\bin;C:\ProgramData\chocolatey\bin;C:\flutter\flutter\bin;C:\Windows\system32;C:\Windows;C:\Windows\System32\Wbem;C:\Windows\System32\WindowsPowerShell\v1.0\;C:\Windows\System32\OpenSSH\;C:\Users\ContainerAdministrator\AppData\Local\Microsoft\WindowsApps"
-
 RUN flutter precache
+
+WORKDIR C:\\actions-runner
+
+RUN powershell -Command \
+    curl.exe -L $env:RUNNER_URL -o 'actions-runner.zip'; \
+    7z x actions-runner.zip -oC:\actions-runner -bsp1 -bse1 ; \
+    Remove-Item -Path 'actions-runner.zip'
+
+COPY scripts/windows/ci_entrypoint.ps1 /actions-runner/ci_entrypoint.ps1
+
+ENTRYPOINT ["powershell", "-File", "ci_entrypoint.ps1"]
